--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 0.1.1 (dev)
   BugFix: The act of moving the mouse over the package list was triggering many
     pkg executions.
+  Added internet check before pkg actions.
 
 0.1.0
   Initial Proof of Concept release.
